Update default settings